--- a/assignments/Makefile
+++ b/assignments/Makefile
@@ -2,14 +2,22 @@
 env:
 	python3 -m venv ~/DareData/.pod6
 
+# activate the environemnt (it does not work. Here just to remember)
+activate:
+	# source ~/DareData/.pod6/bin/activate
+
 # install pip and requirements
 install:
 	pip install --upgrade pip &&\
 		pip install -r requirements.txt
 
+# install dev
+install_dev:
+	pip install -e '.[dev]'
+
 # format the code using python black
 format:
-	black *.py
+	# black *.py
 
 # Lint
 lint:
@@ -17,6 +25,6 @@ lint:
 
 # Testing
 test:
-	# python -m pytest -vv --cov=hello test_hello.py
+	python -m pytest -vv --cov=hello ./life_expectancy/tests/*.py
 
 all: format lint test
