--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,11 +24,14 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install Poetry
+      run: pip install poetry
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        #python -m pip install pytest
+        #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        poetry install
     - name: Lint with pytest
       run: |
         ## stop the build if there are Python syntax errors or undefined names
