--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,6 +26,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Poetry
       run: pip install poetry
+    - name: Change directory to 'assignments'
+      working-directory: assignments
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
