--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,8 +30,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         #python -m pip install pytest
-        #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        poetry install
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        # poetry install
     - name: Lint with pytest
       run: |
         ## stop the build if there are Python syntax errors or undefined names
